# opengldemo

./: .gitignore  CMakeLists.txt  Shader.h  drawTexture.cpp  drawTriangle.cpp  drawcube.cpp  drawlight.cpp  drawlight_basic.cpp  main.cpp  main_dev.cpp
shaders/: commoncude.vs  draw_texture.frag  draw_tri.frag  draw_tri.vs  light_diffuse_cube.frag  light_diffuse_cube.vs  light_diffuse_lamp.frag  light_diffuse_lamp.vs
